My-Full-Manifests/Nginx-03-Service.yaml
apiVersion: v1                          ### Описание Сервиса
kind: Service

# kubectl apply -f My-Full-Manifests/Nginx-03-Service.yaml
# kubectl delete -f My-Full-Manifests/Nginx-03-Service.yaml

metadata:                               # Имя сервиса
  name: nginx-service

spec:
  selector:
    app: nginx-pod                      #! На поды с какими лейблами будет работать сервис, распространять трафик
    project: nginx-project

  ports:
    - protocol: TCP
      port: 81                          # Какой порт будет на сервисе
      targetPort: 80                    #!! Порт на поде
